<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveDataActivity">

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/cpuLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:text="@string/cpuIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cpuData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="21dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/cpuLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/memoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/memoryIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpuLabel" />

    <TextView
        android:id="@+id/memoryData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/memoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/cpuData" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/diskReadLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/diskReadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoryLabel" />

    <TextView
        android:id="@+id/diskReadData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/diskReadLabel"
        app:layout_constraintTop_toBottomOf="@+id/memoryData" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/diskWriteLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/diskWriteIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diskReadLabel" />

    <TextView
        android:id="@+id/diskWriteData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/diskWriteLabel"
        app:layout_constraintTop_toBottomOf="@+id/diskReadData" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/downloadLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/downloadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diskWriteLabel" />

    <TextView
        android:id="@+id/downloadData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/downloadLabel"
        app:layout_constraintTop_toBottomOf="@+id/diskWriteData" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/uploadLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/uploadIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadLabel" />

    <TextView
        android:id="@+id/uploadData"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/uploadLabel"
        app:layout_constraintTop_toBottomOf="@+id/downloadData" />

    <dev.truewinter.framed.fonts.FontAwesomeSolid
        android:id="@+id/sceneSwitcherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/sceneSwitcherIcon"
        android:textSize="24sp"
        android:background="@drawable/bg_primary_rounded_corners"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/liveDataActivityTopDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/liveDataActivityBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/ldaHelpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/versionTextLDA"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:text="v0.0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liveDataActivityBottomDivider" />

    <Button
        android:id="@+id/ldaHelpBtn"
        android:layout_width="37dp"
        android:layout_height="41dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/helpQMark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/liveDataActivityTopDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diagList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/liveDataActivityBottomDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/liveDataActivityTopDivider"
        app:layout_constraintTop_toBottomOf="@+id/liveDataActivityTopDivider" />
</androidx.constraintlayout.widget.ConstraintLayout>